--- a/packages/main/src/themes/FormLayout.css
+++ b/packages/main/src/themes/FormLayout.css
@@ -7,7 +7,7 @@
 */
 
 /* S - 1 column */
-@container (max-width: 600px) {
+@container (max-width: 599px) {
 	.ui5-form-layout {
 		grid-template-columns: 1fr;
 	}
@@ -21,7 +21,7 @@
 }
 
 /* M  - 1 column by default, up to 2 columns */
-@container (width > 600px) and (width <= 1024px) {
+@container (min-width: 600px) and (max-width: 1023px) {
 	.ui5-form-layout {
 		grid-template-columns: 1fr;
 	}
@@ -42,7 +42,7 @@
 }
 
 /* L - 2 columns by default, up to 3 columns */
-@container (width > 1024px) and (width <= 1440px) {
+@container (min-width: 1024px) and (max-width: 1439px) {
 
 	.ui5-form-layout {
 		grid-template-columns: repeat(2, 1fr);
@@ -77,7 +77,7 @@
 }
 
 /* XL - 3 columns by default, up to 6 */
-@container (min-width: 1441px) {
+@container (min-width: 1440px) {
 	.ui5-form-layout {
 		grid-template-columns: repeat(3, 1fr);
 	}
